--- a/Project/src/app/components/user/profile/profile.component.html
+++ b/Project/src/app/components/user/profile/profile.component.html
@@ -72,7 +72,7 @@
                     class="form-control"/>
              <button (click) = "updateProfile()"
                      class="text-box1"> Update </button>
-             <button routerLink='/user/{{userId}}/website'
+             <button routerLink='/user/{{userId}}/event'
                      class="text-box3"> My Events
              </button>
              <button routerLink='/login'
