--- a/Project/src/styles.css
+++ b/Project/src/styles.css
@@ -390,3 +390,9 @@ p.pLine2 {
 }
 
 #myInput:focus {outline: 3px solid #ddd;}
+
+input.html-date{
+  height: 45px;
+  margin-top: 10px;
+  margin-left: 8px;
+}
