remove past events, fixed broken links

--- a/Project/src/app/components/event/event-att/event-att.component.html
+++ b/Project/src/app/components/event/event-att/event-att.component.html
@@ -2,7 +2,7 @@
   <nav class="navbar navbar-default navbar-fixed-top header">
     <div class="container-fluid ">
       <div class="navbar-header">
-        <a routerLink="" class="navbar-brand weaver-size">
+        <a routerLink="/user/{{userId}}/event" class="navbar-brand weaver-size">
           <img class = "pull-left" id="logo" src="../../../../assets/images/logo.png">Weaver</a>
       </div>
       <ul class="nav navbar-nav navbar-right">
@@ -19,18 +19,6 @@
     </div>
   </nav>
   <div class="topspace">
-    <header class = "whitetext">
-      <div class = "row">
-        <div class="col-xs-1">
-          <a routerLink='/user/:uid/website'>
-            <span class="glyphicon glyphicon-chevron-left"></span>
-          </a>
-        </div>
-        <div class="col-xs-6" >
-          <span style="font-size: 25pt">Attendees</span>
-        </div>
-      </div>
-    </header>
     <hr />
 
 
@@ -42,7 +30,7 @@
           <div class = "row">
             <div class="col-xs-1"></div>
             <div class="col-xs-6" style="font-size: 20px">
-              <a routerLink = '/user/:uid'>Xing Du</a>
+              <a routerLink = '/user/{{userId}}'>Xing Du</a>
             </div>
           </div>
         </li>
@@ -51,28 +39,12 @@
           <div class = "row">
             <div class="col-xs-1"></div>
             <div class="col-xs-6" style="font-size: 20px">
-              <a routerLink = '/user/:uid/website/att/:pid'>Haolin Li</a>
+              <a routerLink = '/user/{{userId}}/event/{{eventId}}/attendee/:aid'>Haolin Li</a>
             </div>
           </div>
         </li>
 
-        <li class = "list-group-item">
-          <div class = "row">
-            <div class="col-xs-1"></div>
-            <div class="col-xs-6" style="font-size: 20px">
-              <a routerLink = '/user/:uid/website/att/:pid'>Qi Zhang</a>
-            </div>
-          </div>
-        </li>
 
-        <li class = "list-group-item">
-          <div class = "row">
-            <div class="col-xs-1"></div>
-            <div class="col-xs-6" style="font-size: 20px">
-              <a routerLink = '/user/:uid/website/att/:pid'>Jin Niu</a>
-            </div>
-          </div>
-        </li>
 
       </ul>
     </div>
@@ -80,8 +52,4 @@
   </div>
 
 </div>
-<footer class = "blue">
-  <a routerLink = '/user/:uid'>
-    <span class="glyphicon glyphicon-user"></span>
-  </a>
-</footer>
+
