--- a/Project/src/app/components/event/event-list/event-list.component.html
+++ b/Project/src/app/components/event/event-list/event-list.component.html
@@ -24,11 +24,10 @@
       <h2>Explore Events </h2>
 
       <ul id="myTab" class="nav nav-tabs">
-        <li class="active"><a data-toggle="tab" href = "#live">Live Event</a></li>
-        <li><a data-toggle="tab" href = "#post">Post Events</a></li>
-        <li><a data-toggle="tab" href = "#saved">Saved Events</a></li>
-        <li><a data-toggle="tab" href = "#past">Past Events</a></li>
+        <li class="active"><a data-toggle="tab" href = "#live">Events</a></li>
         <li><a data-toggle="tab" href = "#going">Going Events</a></li>
+        <li><a data-toggle="tab" href = "#saved">Saved Events</a></li>
+        <li><a data-toggle="tab" href = "#post">Post Events</a></li>
       </ul>
       <br>
 
@@ -36,16 +35,8 @@
       <div id="myTabContent" class="tab-content">
         <div class="tab-pane fade in active" id="live">
 
-          <ul class = "list-group">
+          <ul *ngFor = "let event of events"  class = "list-group">
 
-            <li class = "list-group-item">
-              <div class = "row">
-                <div class="col-xs-1"></div>
-                <div class="col-xs-6" style="font-size: 15pt">
-                  <span> March 2018</span>
-                </div>
-              </div>
-            </li>
 
             <li class = "list-group-item">
               <div class = "row">
@@ -59,49 +50,17 @@
                 <div class="col-xs-6" style="font-size: 15pt">
     <span>
       <a target="_blank" rel="noopener"
-         href="https://www.eventbrite.com/e/women-who-empower-our-world-tickets-43039762087">
-        Women who empower our world</a>
+         href={{event.url}}>
+        {{event.name}}</a>
     </span>
                 </div>
 
                 <div class="col-xs-2">
-                  <span>Thu, March 8, 2018 6:00 PM – 9:00 PM PST</span>
+              <span>{{event.date}}</span>
                 </div>
 
                 <div class="col-xs-2">
-                  <span>BELLEVUE ROOM AT THE MARKER, 501 GEARY STREET, SAN FRANCISCO, CA 94102</span>
-                </div>
-
-                <div class="col-xs-1">
-                  <a routerLink="">
-                    <span>Share</span>
-                  </a>
-                </div>
-
-              </div>
-            </li>
-
-            <li class = "list-group-item">
-              <div class = "row">
-                <div class="col-xs-1">
-                  <a (click)="toAttendees()">
-                    Attendees
-                  </a>
-                </div>
-                <div class="col-xs-6" style="font-size: 15pt">
-    <span>
-      <a target="_blank" rel="noopener"
-         href="https://www.eventbrite.com/e/webinar-putting-your-life-science-degree-to-work-ii-tickets-43408427776?aff=erelpanelorg">
-      Webinar: Putting Your Life Science Degree to Work (II)</a>
-    </span>
-                </div>
-                <div class="col-xs-2">
-        <span>Thu, March 22, 2018
-          3:00 PM – 4:00 PM PDT</span>
-                </div>
-
-                <div class="col-xs-2">
-                  <span>Online</span>
+                  <span>{{event.place}}</span>
                 </div>
 
                 <div class="col-xs-1">
