--- a/Project/src/styles.css
+++ b/Project/src/styles.css
@@ -338,11 +338,15 @@ div.container-right{
   margin:10% 10% 25% 0%;
 }
 
-div.topspace {
+.topspace {
   margin-top: 50px;
 }
 
-div.topspace2{
+.topspace1 {
+  margin-top: 30px;
+}
+
+.topspace2 {
   margin-top: 100px;
 }
 
