--- a/Project/src/app/components/event/event-list/event-list.component.html
+++ b/Project/src/app/components/event/event-list/event-list.component.html
@@ -44,7 +44,7 @@
                   </a>
                 </div>
 
-                <div class="col-xs-6" style="font-size: 15pt">
+                <div class="col-xs-5" style="font-size: 15pt">
                   <span>
                     <a target="_blank" rel="noopener"
                        href={{event.url}}>
@@ -60,10 +60,11 @@
                   <span>{{event.location}}</span>
                 </div>
 
-                <div class="col-xs-1">
-                  <a routerLink="">
-                    <span>Share</span>
-                  </a>
+                <div class="col-xs-2">
+                  <div class="btn-group">
+                    <button type="button" class="btn btn-secondary withBorder">Interest</button>
+                    <button type="button" class="btn btn-secondary withBorder">Going</button>
+                  </div>
                 </div>
               </div>
             </li>
@@ -80,12 +81,12 @@
                     Attendees
                   </a>
                 </div>
-                <div class="col-xs-6" style="font-size: 15pt">
-    <span>
-      <a target="_blank" rel="noopener"
-         href= {{postevent.url}}>
-        {{postevent.name}} </a>
-    </span>
+                <div class="col-xs-5" style="font-size: 15pt">
+                  <span>
+                    <a target="_blank" rel="noopener"
+                       href= {{postevent.url}}>
+                      {{postevent.name}} </a>
+                  </span>
                 </div>
                 <div class="col-xs-2">
                   <span> {{postevent.date}}</span>
@@ -93,6 +94,15 @@
                 <div class="col-xs-2">
                   <span>{{postevent.location}}</span>
                 </div>
+                <div class="col-xs-2" style="font-size: 15pt">
+                <div class="btn-group">
+                  <button (click)="editEvent()" class = "noborder btn btn-default"><i class="material-icons">&#xe254;</i>
+                  </button>
+                  <button (click)="deleteEvent()" class = "noborder btn btn-default"><i class="glyphicon glyphicon-trash"></i>
+                  </button>
+                </div>
+                </div>
+
 
               </div>
             </li>
