--- a/Project/src/app/components/event/event-list/event-list.component.html
+++ b/Project/src/app/components/event/event-list/event-list.component.html
@@ -175,6 +175,6 @@
       </div>
 
     </div>
-
+    <iframe width="600" height="450" frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/search?q=Northeastern%20University%20Silicon%20Valley%2C%20Silver%20Creek%20Valley%20Road%2C%20%E5%9C%A3%E8%8D%B7%E8%A5%BF%E5%8A%A0%E5%88%A9%E7%A6%8F%E5%B0%BC%E4%BA%9A%E5%B7%9E%E7%BE%8E%E5%9B%BD&key=AIzaSyDGKuZQhk8Iz2d17yJjeRrKovxk29FFlSI" allowfullscreen></iframe>
   </div>
 </div>
