--- a/Project/src/app/components/user/profile/profile.component.html
+++ b/Project/src/app/components/user/profile/profile.component.html
@@ -84,7 +84,7 @@
                      class="text-box2" > Sign Out</button>
 
 </div>
-
+          <a target="_blank" href="https://calendar.google.com/event?action=TEMPLATE&amp;tmeid=MjJkdHFmNWphdmNjamdpaTNsNWlhZGZvaGIgdGVkZHlsaGxAbQ&amp;tmsrc=teddylhl%40gmail.com"><img border="0" src="https://www.google.com/calendar/images/ext/gc_button1_en.gif"></a>
         </div>
     </div>
   </div>
