Googlecalendar/AngularCalendar/GoogleMap
Delivered as individual component

--- a/Project/src/app/components/home/home-page/home-page.component.html
+++ b/Project/src/app/components/home/home-page/home-page.component.html
@@ -48,7 +48,7 @@
             <hr class=" pull-left">
             <br>
             <br>
-            <button routerLink="/event" class="btn btn-default btn-lg bt"><i class="far fa-address-card"></i>  Get Started!
+            <button routerLink="Home_event" class="btn btn-default btn-lg bt"><i class="far fa-address-card"></i>  Get Started!
             </button>
           </div>
         </div>
