--- a/Project/src/app/components/home/home-event/home-event.component.html
+++ b/Project/src/app/components/home/home-event/home-event.component.html
@@ -1,3 +1,30 @@
-<p>
-  home-event works!
-</p>
+
+<!DOCTYPE html>
+<html>
+<head>
+  <meta charset='utf-8' />
+  <link href='node_modules/fullcalendar/dist/fullcalendar.css' rel='stylesheet' />
+  <link href='node_modules/fullcalendar-scheduler/dist/scheduler.css' rel='stylesheet' />
+  <link href='node_modules/fullcalendar/dist/fullcalendar.print.css' rel='stylesheet' media='print' />
+  <script src='node_modules/jquery/dist/jquery.js'></script>
+  <script src='node_modules/moment/moment.js'></script>
+  <script src='home-event.component.ts'></script>
+  <style>
+    body {
+      margin: 40px 10px;
+      padding: 0;
+      font-family: "Lucida Grande",Helvetica,Arial,Verdana,sans-serif;
+      font-size: 14px;
+    }
+    #calendar {
+      max-width: 900px;
+      margin: 0 auto;
+    }
+  </style>
+</head>
+<body>
+
+<div id='calendar'></div>
+
+</body>
+</html>
